# universe

./: .gitignore  MODULE.bazel  README.md
go/: BUILD.bazel  WORKSPACE  deps.bzl  go.mod  main.go
go/cmd/: BUILD.bazel  roll.go  root.go
go/pkg/roll/: BUILD.bazel  roll_dice.go
python/: BUILD.bazel  example.py  test.py
rust/: BUILD.bazel
