module(
    name = "universe",
    version = "0.0.1",
)

# https://github.com/bazelbuild/rules_go/releases
bazel_dep(name = "rules_go", version = "0.42.0")
bazel_dep(name = "gazelle", version = "0.34.0")

# https://github.com/bazelbuild/rules_python/releases.
bazel_dep(name = "rules_python", version = "0.26.0")

# https://github.com/bazelbuild/rules_rust/releases
bazel_dep(name = "rules_rust", version = "0.56.0")

# https://github.com/bazelbuild/rules_python/blob/main/docs/sphinx/pypi-dependencies.md#using-dependencies-from-pypi
pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "my_deps",
    python_version = "3.11",
    requirements_lock = "//python:requirements.txt",
)
use_repo(pip, "my_deps")

# Go dependencies
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//go:go.mod")
use_repo(
    go_deps,
    "com_github_inconshreveable_mousetrap",
    "com_github_spf13_cobra",
    "com_github_spf13_pflag",
)