load("@rules_python//python:defs.bzl", "py_binary")

#pip_parse(
#    name = "pip_deps",
#    requirements_lock = ":requirements.txt",
#)
#
#load("@pip_deps//:requirements.bzl", "install_deps")
#
#install_deps()
#
#load("@pip_deps//:requirements.bzl", "requirement")
#

py_binary(
    name = "example",
    srcs = ["example.py"],
    deps = [
        #        requirement("requests"),
    ],
)
